[package]
name = "vir-gen"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A VIR generator."

[dependencies]
syn = { version = "1.0", features = ["full", "fold", "parsing", "derive", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
tempfile = "3"
rustc-hash = "1.1.0"