[package]
name = "svirpti-vir-generate"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A VIR generator."

[dependencies]
syn = { version = "1.0", features = ["full", "fold", "parsing", "derive"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
